--- a/blog.css
+++ b/blog.css
@@ -50,9 +50,9 @@ p {
 }
 
 span {
-    font-size: larger;
+    font-size: 30px;
     margin-top: 30px;
-    font-weight: 200;
+    font-weight: 200; 
 
 }
 
